; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/fnic/extr_fnic_scsi.c_fnic_exch_mgr_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/fnic/extr_fnic_scsi.c_fnic_exch_mgr_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fc_lport = type { i32 }
%struct.fnic = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fnic_exch_mgr_reset(%struct.fc_lport* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.fc_lport*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.fnic*, align 8
  store %struct.fc_lport* %0, %struct.fc_lport** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load %struct.fc_lport*, %struct.fc_lport** %4, align 8
  %9 = call %struct.fnic* @lport_priv(%struct.fc_lport* %8)
  store %struct.fnic* %9, %struct.fnic** %7, align 8
  %10 = load i64, i64* %5, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %3
  br label %32

13:                                               ; preds = %3
  %14 = load i64, i64* %6, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %13
  %17 = load %struct.fnic*, %struct.fnic** %7, align 8
  %18 = load i64, i64* %6, align 8
  %19 = call i32 @fnic_rport_exch_reset(%struct.fnic* %17, i64 %18)
  br label %32

20:                                               ; preds = %13
  %21 = load %struct.fnic*, %struct.fnic** %7, align 8
  %22 = getelementptr inbounds %struct.fnic, %struct.fnic* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %28, label %25

25:                                               ; preds = %20
  %26 = load %struct.fc_lport*, %struct.fc_lport** %4, align 8
  %27 = call i32 @fnic_scsi_cleanup(%struct.fc_lport* %26)
  br label %31

28:                                               ; preds = %20
  %29 = load %struct.fc_lport*, %struct.fc_lport** %4, align 8
  %30 = call i32 @fnic_scsi_abort_io(%struct.fc_lport* %29)
  br label %31

31:                                               ; preds = %28, %25
  br label %32

32:                                               ; preds = %31, %16, %12
  %33 = load %struct.fc_lport*, %struct.fc_lport** %4, align 8
  %34 = load i64, i64* %5, align 8
  %35 = load i64, i64* %6, align 8
  %36 = call i32 @fc_exch_mgr_reset(%struct.fc_lport* %33, i64 %34, i64 %35)
  ret void
}

declare dso_local %struct.fnic* @lport_priv(%struct.fc_lport*) #1

declare dso_local i32 @fnic_rport_exch_reset(%struct.fnic*, i64) #1

declare dso_local i32 @fnic_scsi_cleanup(%struct.fc_lport*) #1

declare dso_local i32 @fnic_scsi_abort_io(%struct.fc_lport*) #1

declare dso_local i32 @fc_exch_mgr_reset(%struct.fc_lport*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
